--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DaggerMitchDemo</string>
     <string name="logout">logout</string>
+    <string name="profile">profile</string>
+    <string name="posts">posts</string>
 </resources>
